feat: complete shorten URL service , docker setup and configuration
